JS2 - made it so keyboard only appears when you're on mobile because I was having issues with double firing of onTouchStart and onMouseDown on mobile. plus it just makes sense to get rid of the keyboard on dekstop

--- a/src/play/play.css
+++ b/src/play/play.css
@@ -44,6 +44,10 @@
     caret-color: transparent;
 }
 
+.play-page #word-entry input:not(:placeholder-shown) {
+    animation: none;
+}
+
 @keyframes blink {
     0%, 100% {
         opacity: 0;
